[FIX] Ajustado configurações para usarem o eureka-server.

--- a/city/src/main/resources/application.yml
+++ b/city/src/main/resources/application.yml
@@ -1,8 +1,17 @@
 
 server:
   port: 8081
-  
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
 spring:
+  application:
+    name: 'city'
   jpa:
     database: postgresql
     show-sql: true
