--- a/customer/src/main/resources/application.yml
+++ b/customer/src/main/resources/application.yml
@@ -2,7 +2,16 @@
 server:
   port: 8080
 
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
 spring:
+  application:
+    name: 'customer'
   jpa:
     database: postgresql
     show-sql: true
@@ -12,7 +21,6 @@ spring:
     url: jdbc:postgresql://localhost/customer?useSSL=false
     username: postgres
     password: postgres
-
   jackson:
     deserialization:
       fail-on-unknown-properties: true
