--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -51,6 +51,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>config-server</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
