--- a/customer/pom.xml
+++ b/customer/pom.xml
@@ -81,6 +81,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>customer</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
