--- a/zuul/pom.xml
+++ b/zuul/pom.xml
@@ -59,6 +59,7 @@
 	</dependencyManagement>
 
 	<build>
+		<finalName>zuul</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
